--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Sagas -- Translations into French'
 - !lcsh 'Njáll Thorgursson, approximately 930-1011'
 - !lcc 'PT'
+- GITenberg
 title: La Saga de Njal
 url: http://www.gutenberg.org/ebooks/19440
